c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@rotate.c.2021.linux.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/rotate.2021.linux.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn rotate_left_64(
    mut x: ::core::ffi::c_ulonglong,
) -> ::core::ffi::c_ulonglong {
    return (x as ::core::ffi::c_ulong).rotate_left(4 as u32) as ::core::ffi::c_ulonglong;
}
#[no_mangle]
pub unsafe extern "C" fn rotate_right_64(
    mut x: ::core::ffi::c_ulonglong,
) -> ::core::ffi::c_ulonglong {
    return (x as ::core::ffi::c_ulong).rotate_right(4 as u32) as ::core::ffi::c_ulonglong;
}
