c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@rotate.c.2021.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/rotate.2021.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn rotate_left_8(mut x: ::core::ffi::c_uchar) -> ::core::ffi::c_uchar {
    return x.rotate_left(1 as u32);
}
#[no_mangle]
pub unsafe extern "C" fn rotate_left_16(mut x: ::core::ffi::c_ushort) -> ::core::ffi::c_ushort {
    return x.rotate_left(2 as u32);
}
#[no_mangle]
pub unsafe extern "C" fn rotate_left_32(mut x: ::core::ffi::c_uint) -> ::core::ffi::c_uint {
    return x.rotate_left(3 as u32);
}
#[no_mangle]
pub unsafe extern "C" fn rotate_right_8(mut x: ::core::ffi::c_uchar) -> ::core::ffi::c_uchar {
    return x.rotate_right(1 as u32);
}
#[no_mangle]
pub unsafe extern "C" fn rotate_right_16(mut x: ::core::ffi::c_ushort) -> ::core::ffi::c_ushort {
    return x.rotate_right(2 as u32);
}
#[no_mangle]
pub unsafe extern "C" fn rotate_right_32(mut x: ::core::ffi::c_uint) -> ::core::ffi::c_uint {
    return x.rotate_right(3 as u32);
}
